--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
+    "todoapp": "link:",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
